[package]
name = "message-passing"
version = "0.1.0"
authors = ["Aureliano Yepez <yepez4845@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
